# serde-xml-rs

./: Cargo.toml
src/de/: buffer.rs  map.rs  mod.rs  seq.rs  var.rs
tests/: test.rs
