[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
description = "Pseudo-namespaced fork of `serde-xml-rs`"
license = "MIT"
name = "tobz1000-serde-xml-rs"
repository = "https://github.com/tobz1000/serde-xml-rs"
version = "0.4.1-tobz1000-1"

[dependencies]
log = "0.4"
serde = "1.0"
xml-rs = "0.8.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0"
simple_logger = "1.0.1"
docmatic = "0.1.2"

[lib]
name = "serde_xml_rs"
